refactor: update colors and repo info

--- a/components/drag-and-drop/index.module.scss
+++ b/components/drag-and-drop/index.module.scss
@@ -44,13 +44,18 @@
 
 	&.dragActive rect {
 		stroke: $link;
-		stroke-width: 4px;
 		animation-play-state: running;
 	}
 }
 
-:global(.dark-mode) .dashed.dragActive rect {
-	stroke: $link-dark;
+:global(.dark-mode) .dashed {
+	rect {
+		stroke: #495c70;
+	}
+
+	&.dragActive rect {
+		stroke: $off-white-dark;
+	}
 }
 
 .dropZoneWrapper {
@@ -67,13 +72,18 @@
 
 		.dashed rect {
 			stroke: $link;
-			stroke-width: 4px;
 		}
 	}
 }
 
 :global(.dark-mode) .dropZoneWrapper {
 	background: $dark-grey;
+
+	&:hover {
+		.dashed rect {
+			stroke: $off-white-dark;
+		}
+	}
 }
 
 @keyframes dash {
@@ -118,14 +128,15 @@
 	}
 }
 
-.imageUploadTextActive {
-	line-height: 48px;
+:global(.dark-mode) .imageUploadText {
+	color: $white-dark;
 }
 
 .info {
 	display: flex;
 	align-items: center;
 	margin-top: 8px;
+	letter-spacing: 0.2px;
 
 	svg {
 		flex: 0 0 20px;
@@ -136,6 +147,10 @@
 		padding: 0 4px;
 		font-weight: 700;
 	}
+}
+
+:global(.dark-mode) .info {
+	color: $off-white-dark;
 }
 
 .imagePreviewWrapper {
@@ -279,6 +294,10 @@
 	}
 }
 
+:global(.dark-mode) .preview {
+	background: $off-white-dark;
+}
+
 .imagePreviewTitle {
 	margin-bottom: 4px;
 	text-align: center;
@@ -289,14 +308,24 @@
 	margin: 0 auto;
 	margin-bottom: 42px;
 	text-align: center;
+	letter-spacing: 0.2px;
 }
 
 .imageInfoItemSvg {
 	margin-right: 8px;
+	letter-spacing: 0.2px;
 }
 
 .showCode {
 	margin-left: 12px;
+
+	&:hover {
+		color: $link;
+	}
+}
+
+:global(.dark-mode) .showCode:hover {
+	color: $off-white-dark;
 }
 
 .imageFooter {
@@ -322,13 +351,14 @@
 
 .makeNewOne {
 	&:hover {
+		color: $link;
 		text-decoration: none;
 	}
 }
 
 :global(.dark-mode) .makeNewOne {
 	&:hover {
-		color: $link-dark;
+		color: $off-white-dark;
 	}
 }
 
@@ -341,7 +371,7 @@
 
 :global(.dark-mode) .reUpload {
 	&:hover {
-		color: $link-dark;
+		color: $off-white-dark;
 	}
 }
 
@@ -415,6 +445,7 @@
 		font-weight: 700;
 		line-height: $line-height-title;
 		color: $link;
+		letter-spacing: 0.2px;
 		content: 'Copied!';
 		opacity: 0;
 		transition: all 0.2s ease;
@@ -427,5 +458,5 @@
 }
 
 :global(.dark-mode) .copyWrapper::before {
-	color: $link-dark;
+	color: $off-white-dark;
 }
