--- a/components/svgs/svg-image-upload.module.scss
+++ b/components/svgs/svg-image-upload.module.scss
@@ -10,9 +10,9 @@
 }
 
 :global(.dark-mode) .rect {
-	fill: #5a5b66;
+	fill: #495c70;
 
 	&.active {
-		fill: $link-dark;
+		fill: $off-white-dark;
 	}
 }
