--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -1,15 +1,16 @@
 $white: #fff;
 $white-dark: #a8b7c4;
 $off-white: #fafafa;
+$off-white-dark: #e4ebf2;
 
 $grey: #9698a3;
 $grey-dark: #657584;
 $light-grey: #ebebeb;
-$dark-grey: #3d3f47;
+$dark-grey: #2e3a47;
 $darker-grey: #33353d;
 
 $black: #000;
-$dark-black: #222329;
+$dark-black: #1e262f;
 $darker-black: #0e141a;
 
 $link: #4c5ed5;
