--- a/components/button/index.module.scss
+++ b/components/button/index.module.scss
@@ -44,12 +44,6 @@
 	padding: 5px 0;
 	background: transparent;
 	border: 1px solid transparent;
-
-	&:hover,
-	&:focus,
-	&:active {
-		// text-decoration: underline;
-	}
 }
 
 .regularTransparent {
@@ -57,7 +51,7 @@
 	padding: 0;
 	font-size: $font-size-regular-body;
 	line-height: $line-height-regular-body;
-	text-decoration: underline;
+	text-decoration: none;
 	border: 0;
 }
 
@@ -83,6 +77,10 @@
 
 .gray {
 	color: $grey;
+}
+
+:global(.dark-mode) .gray {
+	color: $grey-dark;
 }
 
 .white {
