--- a/components/tool-title/index.module.scss
+++ b/components/tool-title/index.module.scss
@@ -5,12 +5,16 @@
 	align-items: flex-start;
 
 	h1 {
-		color: $white;
+		color: $black;
 	}
 }
 
 :global(.dark-mode) .root {
 	h1 {
 		color: #e4ebf2;
+	}
+
+	span {
+		color: $grey-dark;
 	}
 }
