--- a/styles/nprogress.scss
+++ b/styles/nprogress.scss
@@ -5,12 +5,13 @@
 
 #nprogress .bar {
 	position: fixed;
-	top: 0;
+	top: 2px;
 	left: 0;
 	z-index: 1031;
 	width: 100%;
 	height: 2px;
 	background: $link;
+	border-radius: 2px;
 }
 
 /* Fancy blur effect */
@@ -20,9 +21,7 @@
 	display: block;
 	width: 100px;
 	height: 100%;
-	box-shadow: 0 0 10px $link, 0 0 5px $link;
 	opacity: 1;
-	transform: rotate(3deg) translate(0, -4px);
 }
 
 /* Remove these to get rid of the spinner */
