--- a/components/tool-title/index.module.scss
+++ b/components/tool-title/index.module.scss
@@ -7,6 +7,12 @@
 	h1 {
 		color: $black;
 	}
+
+	svg {
+		max-height: 54px;
+		margin-top: 5px;
+		margin-right: 3px;
+	}
 }
 
 :global(.dark-mode) .root {
