--- a/components/tool-title/index.module.scss
+++ b/components/tool-title/index.module.scss
@@ -3,4 +3,25 @@
 .root {
 	display: flex;
 	align-items: flex-start;
+
+	h1 {
+		color: $black;
+	}
+
+	svg {
+		max-height: 54px;
+		margin-top: 5px;
+		margin-right: 3px;
+		filter: drop-shadow(0 2px 4px rgba($black, 0.12));
+	}
+}
+
+:global(.dark-mode) .root {
+	h1 {
+		color: #e4ebf2;
+	}
+
+	span {
+		color: $grey-dark;
+	}
 }
