--- a/components/favycon-info/index.module.scss
+++ b/components/favycon-info/index.module.scss
@@ -7,11 +7,18 @@
 
 .firstParagraph {
 	margin-top: 8px;
+	letter-spacing: 0.2px;
 }
 
 .secondParagraph {
 	margin-top: 16px;
 	margin-bottom: 60px;
+	letter-spacing: 0.2px;
+}
+
+:global(.dark-mode) .firstParagraph,
+:global(.dark-mode) .secondParagraph {
+	color: $white-dark;
 }
 
 .peopleButton {
@@ -27,6 +34,32 @@
 	outline: none;
 }
 
+.footer {
+	letter-spacing: 0.2px;
+
+	button,
+	a {
+		color: #424347;
+		text-decoration: none;
+		transition: all 0.2s ease;
+
+		&:hover {
+			color: $link;
+		}
+	}
+}
+
+:global(.dark-mode) .footer {
+	button,
+	a {
+		color: $white-dark;
+
+		&:hover {
+			color: $off-white-dark;
+		}
+	}
+}
+
 .overlay {
 	position: fixed;
 	top: 0;
@@ -34,11 +67,11 @@
 	bottom: 0;
 	left: 0;
 	z-index: 10;
-	background-color: rgba(255, 255, 255, 0.64);
+	background-color: rgba($light-grey, 0.64);
 }
 
 :global(.dark-mode) .overlay {
-	background-color: rgba(0, 0, 0, 0.8);
+	background-color: rgba($black, 0.8);
 }
 
 .content {
@@ -48,7 +81,7 @@
 	width: 100%;
 	max-width: 730px;
 	height: 100%;
-	max-height: 497px;
+	max-height: 568px;
 	padding: 0;
 	overflow: auto;
 	background: $white;
@@ -64,12 +97,19 @@
 	background: $dark-black;
 }
 
+.modalContainer {
+	max-width: 572px;
+	padding: 0 16px;
+	margin: 0 auto;
+}
+
 .modalHeader {
 	padding-top: 48px;
 	text-align: center;
 }
 
 .logo {
+	width: 96px;
 	height: 96px;
 	margin-bottom: 16px;
 }
@@ -84,20 +124,20 @@
 
 .hr {
 	padding: 0;
+	margin: 0;
 }
 
 .people {
 	display: flex;
 	flex-wrap: wrap;
-	max-width: 572px;
-	margin: 32px auto 0;
+	justify-content: space-between;
+	margin: 8px auto 32px;
 }
 
 .person {
 	display: flex;
-	flex: 0 0 50%;
-	padding: 0 16px;
-	margin-bottom: 24px;
+	width: calc(50% - 15px);
+	margin-top: 24px;
 }
 
 .personAvatar {
@@ -107,11 +147,20 @@
 
 .personTwitter {
 	color: #55acee;
+	text-decoration: none;
+
+	&:hover {
+		color: $link;
+	}
 
 	p {
 		display: flex;
 		align-items: center;
 		color: #55acee;
+
+		&:hover {
+			color: darken(#55acee, 15);
+		}
 	}
 
 	svg {
@@ -121,4 +170,14 @@
 
 :global(.dark-mode) .personTwitter p {
 	color: #55acee;
+
+	&:hover {
+		color: $off-white-dark;
+	}
+}
+
+.modalFooter {
+	padding-bottom: 48px;
+	margin-top: 12px;
+	text-align: center;
 }
