--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -1,20 +1,25 @@
 $white: #fff;
+$white-dark: #a8b7c4;
 $off-white: #fafafa;
+$off-white-dark: #e4ebf2;
 
 $grey: #9698a3;
+$grey-dark: #657584;
 $light-grey: #ebebeb;
-$dark-grey: #3d3f47;
+$dark-grey: #2e3a47;
 $darker-grey: #33353d;
 
 $black: #000;
-$dark-black: #222329;
-$darker-black: #101114;
+$dark-black: #1e262f;
+$darker-black: #0e141a;
 
-$link: #4c66d5;
+$link: #4c5ed5;
 $link-dark: #7083ff;
+$link-hover: #7683e2;
 
 $red: #e15151;
 $green: #3ea161;
+$green-hover: #69b985;
 
 $font-size-h1: 52px;
 $line-height-h1: 64px;
