style(drag-and-drop): fix divivers color
fix #85

--- a/components/drag-and-drop/index.module.scss
+++ b/components/drag-and-drop/index.module.scss
@@ -215,7 +215,7 @@
 }
 
 :global(.dark-mode) .imageInfo {
-	border-top: 1px solid $darker-grey;
+	border-top: 1px solid $dark-grey;
 }
 
 .imageOptionsWrapper {
@@ -225,7 +225,7 @@
 }
 
 :global(.dark-mode) .imageOptionsWrapper {
-	border-top: 1px solid $darker-grey;
+	border-top: 1px solid $dark-grey;
 }
 
 .imageOptions {
@@ -342,7 +342,7 @@
 }
 
 :global(.dark-mode) .imageFooter {
-	border-top: 1px solid $darker-grey;
+	border-top: 1px solid $dark-grey;
 }
 
 .spaceBetween {
