style(button): update hover and active states
fix #81

--- a/components/button/index.module.scss
+++ b/components/button/index.module.scss
@@ -15,6 +15,14 @@
 	&:active {
 		outline: none;
 	}
+
+	&:hover {
+		transform: translate3d(0, -2px, 0);
+	}
+
+	&:active {
+		transform: translate3d(0, 0, 0);
+	}
 }
 
 .primary {
