--- a/styles/font.scss
+++ b/styles/font.scss
@@ -1,36 +1,51 @@
 @font-face {
 	font-family: 'Manrope';
-	src: url('/fonts/Manrope/Manrope-Regular.woff2') format('woff2'),
-		url('/fonts/Manrope/Manrope-Regular.woff') format('woff');
 	font-style: normal;
 	font-weight: 400;
 	font-display: swap;
+	src: url(https://fonts.gstatic.com/s/manrope/v1/xn7gYHE41ni1AdIRggexSvfedN4.woff2) format('woff2');
+	unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC,
+		U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 
 @font-face {
 	font-family: 'Manrope';
-	src: url('/fonts/Manrope/Manrope-Medium.woff2') format('woff2'),
-		url('/fonts/Manrope/Manrope-Medium.woff') format('woff');
 	font-style: normal;
 	font-weight: 500;
 	font-display: swap;
+	src: url(https://fonts.gstatic.com/s/manrope/v1/xn7gYHE41ni1AdIRggexSvfedN4.woff2) format('woff2');
+	unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC,
+		U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 
 @font-face {
 	font-family: 'Manrope';
-	src: url('/fonts/Manrope/Manrope-SemiBold.woff2') format('woff2'),
-		url('/fonts/Manrope/Manrope-SemiBold.woff') format('woff');
 	font-style: normal;
 	font-weight: 600;
 	font-display: swap;
+	src: url(https://fonts.gstatic.com/s/manrope/v1/xn7gYHE41ni1AdIRggexSvfedN4.woff2) format('woff2');
+	unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC,
+		U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 
 @font-face {
 	font-family: 'Manrope';
-	src: url('/fonts/Manrope/Manrope-Bold.woff2') format('woff2'), url('/fonts/Manrope/Manrope-Bold.woff') format('woff');
 	font-style: normal;
 	font-weight: 700;
 	font-display: swap;
+	src: url(https://fonts.gstatic.com/s/manrope/v1/xn7gYHE41ni1AdIRggexSvfedN4.woff2) format('woff2');
+	unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC,
+		U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
+
+@font-face {
+	font-family: 'Manrope';
+	font-style: normal;
+	font-weight: 800;
+	font-display: swap;
+	src: url(https://fonts.gstatic.com/s/manrope/v1/xn7_YHE41ni1AdIRqAuZuw1Bx9mbZk59E9_C-b_Tfc7AGrY.woff) format('woff');
+	unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC,
+		U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 
 @font-face {
