feat: wip - responsive version

--- a/components/button/index.module.scss
+++ b/components/button/index.module.scss
@@ -10,6 +10,10 @@
 	border-radius: 4px;
 	transition: all 0.2s ease;
 
+	@include breakpoint-md {
+		padding: 9px 12px;
+	}
+
 	&:hover,
 	&:focus,
 	&:active {
@@ -52,14 +56,26 @@
 	padding: 5px 0;
 	background: transparent;
 	border: 1px solid transparent;
+
+	@include breakpoint-md {
+		padding: 9px 0;
+	}
+}
+
+:global(.dark-mode) .transparent {
+	@include breakpoint-md {
+		background: $dark-grey;
+	}
 }
 
 .regularTransparent {
-	composes: transparent;
+	composes: base;
 	padding: 0;
 	font-size: $font-size-regular-body;
 	line-height: $line-height-regular-body;
 	text-decoration: none;
+	background: transparent;
+	border: 1px solid transparent;
 	border: 0;
 }
 
@@ -89,6 +105,10 @@
 
 :global(.dark-mode) .gray {
 	color: $grey-dark;
+
+	@include breakpoint-md {
+		color: $off-white-dark;
+	}
 }
 
 .white {
