--- a/components/drag-and-drop/index.module.scss
+++ b/components/drag-and-drop/index.module.scss
@@ -9,13 +9,28 @@
 	border-radius: 8px;
 	box-shadow: 0 2px 4px rgba($black, 0.12);
 	transition: background 0.2s ease;
+
+	@include breakpoint-md {
+		max-width: 100%;
+		height: 100%;
+		border-radius: 0;
+	}
+
+	&.transparent {
+		background: transparent;
+	}
 }
 
 :global(.dark-mode) .root {
 	background: $dark-black;
+
+	&.transparent {
+		background: transparent;
+	}
 }
 
 .container {
+	position: relative;
 	padding: 24px 24px 20px;
 	pointer-events: all;
 	border-radius: 8px;
@@ -24,6 +39,19 @@
 	&.loading {
 		pointer-events: none;
 		opacity: 0.32;
+	}
+
+	@include breakpoint-md {
+		display: flex;
+		flex-direction: column;
+		width: 100%;
+		height: calc(100% - 68px);
+		margin-top: 68px;
+		border-radius: 0;
+	}
+
+	&.transparent {
+		padding: 0;
 	}
 }
 
@@ -67,6 +95,13 @@
 	border-radius: 6px;
 	transition: background 0.2s ease;
 
+	@include breakpoint-md {
+		flex-grow: 1;
+		margin-bottom: 0;
+		background: transparent;
+		border-radius: 0;
+	}
+
 	&:hover {
 		cursor: pointer;
 
@@ -78,6 +113,10 @@
 
 :global(.dark-mode) .dropZoneWrapper {
 	background: $dark-grey;
+
+	@include breakpoint-md {
+		background: transparent;
+	}
 
 	&:hover {
 		.dashed rect {
@@ -92,6 +131,32 @@
 	}
 	100% {
 		stroke-dashoffset: -20;
+	}
+}
+
+.dropZoneFooter {
+	transition: background 0.2s ease;
+
+	@include breakpoint-md {
+		padding: 16px 24px 24px;
+		padding-bottom: env(safe-area-inset-bottom);
+		background: rgba($white, 0.88);
+		border-radius: 16px 16px 0 0;
+		box-shadow: 0 -2px 4px rgba($black, 0.12);
+
+		@supports (padding: max(1px)) {
+			padding-bottom: max(24px, env(safe-area-inset-bottom));
+		}
+
+		p {
+			font-size: 15px;
+		}
+	}
+}
+
+:global(.dark-mode) .dropZoneFooter {
+	@include breakpoint-md {
+		background: rgba($dark-black, 0.88);
 	}
 }
 
@@ -126,25 +191,40 @@
 	&.dragActive {
 		height: 48px;
 	}
+
+	@include breakpoint-md {
+		font-size: 16px;
+		font-weight: 600;
+		line-height: 28px;
+		color: $off-white-dark;
+	}
 }
 
 :global(.dark-mode) .imageUploadText {
 	color: $white-dark;
+
+	@include breakpoint-md {
+		color: $off-white-dark;
+	}
 }
 
 .info {
 	display: flex;
-	align-items: center;
+	align-items: flex-start;
 	margin-top: 8px;
 	letter-spacing: 0.2px;
 
 	svg {
 		flex: 0 0 20px;
 		margin-right: 8px;
+
+		@include breakpoint-md {
+			height: 24px;
+		}
 	}
 
 	strong {
-		padding: 0 4px;
+		// padding: 0 4px;
 		font-weight: 700;
 	}
 }
@@ -209,6 +289,7 @@
 
 .imageInfo {
 	display: flex;
+	flex-wrap: wrap;
 	padding: 16px 0;
 	border-top: 1px solid $light-grey;
 	transition: all 0.2s ease;
@@ -222,15 +303,14 @@
 	padding: 8px 0 16px;
 	border-top: 1px solid $light-grey;
 	transition: all 0.2s ease;
+
+	@include breakpoint-md {
+		padding: 24px 0;
+	}
 }
 
 :global(.dark-mode) .imageOptionsWrapper {
 	border-top: 1px solid $dark-grey;
-}
-
-.imageOptions {
-	display: flex;
-	padding: 8px 0 16px;
 }
 
 .imageInfoItem {
@@ -240,6 +320,24 @@
 
 	span {
 		margin-right: 8px;
+	}
+
+	@include breakpoint-md {
+		margin-top: 8px;
+		margin-bottom: 8px;
+	}
+}
+
+.imageOptions {
+	display: flex;
+	flex-wrap: wrap;
+	padding: 8px 0 16px;
+
+	.imageInfoItem {
+		@include breakpoint-md {
+			margin-top: 0;
+			margin-bottom: 24px;
+		}
 	}
 }
 
@@ -259,6 +357,10 @@
 	align-items: center;
 	justify-content: center;
 	margin: 16px 0 12px;
+
+	@include breakpoint-md {
+		align-items: flex-end;
+	}
 }
 
 .preview {
@@ -269,15 +371,39 @@
 	background: $white;
 	box-shadow: 0 2px 4px rgba($black, 0.12);
 
+	@include breakpoint-md {
+		width: 96px;
+		height: 96px;
+		margin-right: 0;
+	}
+
 	img {
 		width: 40px;
 		height: 40px;
 		object-fit: contain;
+
+		@include breakpoint-md {
+			width: 96px;
+			height: 96px;
+		}
 	}
 
 	&.circle,
 	&.circle img {
 		border-radius: 24px;
+
+		@include breakpoint-md {
+			width: 52px;
+			height: 52px;
+			border-radius: 26px;
+		}
+	}
+
+	&.circle {
+		@include breakpoint-md {
+			z-index: 1;
+			transform: translate3d(21px, 3px, 0);
+		}
 	}
 
 	&.square,
@@ -285,12 +411,31 @@
 		width: 48px;
 		height: 48px;
 		border-radius: 4px;
+
+		@include breakpoint-md {
+			width: 96px;
+			height: 96px;
+			border-radius: 8px;
+		}
 	}
 
 	&.rounded,
 	&.rounded img {
 		margin-right: 0;
 		border-radius: 14px;
+
+		@include breakpoint-md {
+			width: 40px;
+			height: 40px;
+			border-radius: 13px;
+		}
+	}
+
+	&.rounded {
+		@include breakpoint-md {
+			z-index: 1;
+			transform: translate3d(-12px, 3px, 0);
+		}
 	}
 }
 
@@ -339,14 +484,31 @@
 	padding: 23px 24px 24px 24px;
 	border-top: 1px solid $light-grey;
 	transition: all 0.2s ease;
+
+	&.spaceBetween {
+		justify-content: space-between;
+	}
+
+	@include breakpoint-md {
+		flex-direction: column-reverse;
+		border-top: 1px solid transparent;
+
+		> * {
+			margin-bottom: 12px;
+		}
+	}
+
+	@include breakpoint-xs {
+		align-items: stretch;
+	}
 }
 
 :global(.dark-mode) .imageFooter {
 	border-top: 1px solid $dark-grey;
-}
 
-.spaceBetween {
-	justify-content: space-between;
+	@include breakpoint-md {
+		border-top: 1px solid transparent;
+	}
 }
 
 .makeNewOne {
@@ -377,6 +539,10 @@
 
 .imageGenerate {
 	margin-left: 24px;
+
+	@include breakpoint-md {
+		margin-left: 0;
+	}
 }
 
 .modalContainer {
