--- a/components/header/index.module.scss
+++ b/components/header/index.module.scss
@@ -15,6 +15,10 @@
 	align-items: center;
 	justify-content: flex-end;
 	height: 100%;
+
+	@include breakpoint-md {
+		justify-content: space-between;
+	}
 }
 
 .item {
@@ -23,14 +27,30 @@
 	box-shadow: 0 0 10px rgba($off-white, 0.5);
 	transition: all 0.2s ease;
 
+	@include breakpoint-md {
+		background: transparent;
+		box-shadow: none;
+	}
+
 	a {
 		display: flex;
 		align-items: center;
 		justify-content: center;
+	}
+
+	&:first-child {
+		svg {
+			width: 48px;
+		}
 	}
 }
 
 :global(.dark-mode) .item {
 	background: $darker-black;
 	box-shadow: 0 0 10px rgba($darker-black, 0.5);
+
+	@include breakpoint-md {
+		background: transparent;
+		box-shadow: none;
+	}
 }
