chore: change class name convention

--- a/components/typography/index.module.scss
+++ b/components/typography/index.module.scss
@@ -113,7 +113,7 @@
 	transition: color 0.2s ease;
 }
 
-:global(.dark-mode) .white:not(.color-immutable) {
+:global(.dark-mode) .white:not(.colorImmutable) {
 	color: $black;
 }
 
