--- a/components/svgs/svg-image-upload.module.scss
+++ b/components/svgs/svg-image-upload.module.scss
@@ -14,8 +14,36 @@
 	fill: #ccc;
 	transition: all 0.2s ease;
 
+	&:nth-of-type(1) {
+		y: 20px;
+		height: 48px;
+	}
+
+	&:nth-of-type(2) {
+		x: 20px;
+		width: 48px;
+	}
+
 	&.active {
-		fill: $link;
+		@include breakpoint-md-up {
+			fill: $link;
+		}
+
+		&:nth-of-type(1) {
+			/* mouse, touch pad */
+			@media (hover: hover) and (pointer: fine) {
+				y: 16px;
+				height: 56px;
+			}
+		}
+
+		&:nth-of-type(2) {
+			/* mouse, touch pad */
+			@media (hover: hover) and (pointer: fine) {
+				x: 16px;
+				width: 56px;
+			}
+		}
 	}
 
 	@include breakpoint-md {
