--- a/components/typography/index.module.scss
+++ b/components/typography/index.module.scss
@@ -71,6 +71,11 @@
 	line-height: $line-height-large-title;
 }
 
+.extraLargeTitle {
+	font-size: $font-size-extra-large-title;
+	line-height: $line-height-extra-large-title;
+}
+
 .regular {
 	font-weight: 400;
 }
