--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -49,3 +49,6 @@ $line-height-title: 24px;
 
 $font-size-large-title: 18px;
 $line-height-large-title: 24px;
+
+$font-size-extra-large-title: 32px;
+$line-height-extra-large-title: 40px;
