feat(responsive): update background images and light/dark toggle color

--- a/components/dark-mode-toggle/index.module.scss
+++ b/components/dark-mode-toggle/index.module.scss
@@ -72,11 +72,7 @@
 	.sun,
 	.moon {
 		path {
-			fill: #657584;
-
-			@include breakpoint-md {
-				fill: #b1a8a3;
-			}
+			fill: $grey-dark;
 		}
 	}
 }
