feat(responsive): add about us modal on mobile

--- a/components/button/index.module.scss
+++ b/components/button/index.module.scss
@@ -20,12 +20,14 @@
 		outline: none;
 	}
 
-	&:hover {
-		transform: translate3d(0, -2px, 0);
-	}
+	@media (pointer: fine) {
+		&:hover {
+			transform: translate3d(0, -2px, 0);
+		}
 
-	&:active {
-		transform: translate3d(0, 0, 0);
+		&:active {
+			transform: translate3d(0, 0, 0);
+		}
 	}
 }
 
