--- a/components/typography/index.module.scss
+++ b/components/typography/index.module.scss
@@ -9,6 +9,11 @@
 	line-height: $line-height-h1;
 }
 
+.h2 {
+	font-size: $font-size-extra-large-title;
+	line-height: $line-height-extra-large-title;
+}
+
 .smallBody {
 	font-size: $font-size-small-body;
 	line-height: $line-height-small-body;
