--- a/pages/index.module.scss
+++ b/pages/index.module.scss
@@ -6,6 +6,7 @@
 }
 
 .container {
+	position: relative;
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
@@ -19,11 +20,5 @@
 		align-items: stretch;
 		max-width: 100%;
 		padding: 0;
-	}
-}
-
-.info {
-	@include breakpoint-md {
-		display: none;
 	}
 }
