feat: responsive version (#113)
* feat: wip - responsive version

* chore(config): update eslint config

* fix: align drop zone footer

* fix: add prop for immutable colors

* fix: container width issue on tablet

* chore: change class name convention

* chore: add missing error styles on mobile

* style(viewport): add 100vh fix for safari

* style: update bottom info padding on mobile

* perf: remove getInitialProps function and dependencies

* chore(deps): update sharp to v0.25.0

* chore: delete unused hook

* docs: add @miguellteixeira as a contributor

* test(cypress): update page load wait

* feat(responsive): update code modal for mobile

* feat(responsive): update background images and light/dark toggle color

* feat(responsive): add about us modal on mobile

* feat(responsive): update sharable image

Co-authored-by: Miguel Teixeira <teixeira.silva.miguel@gmail.com>

--- a/components/button/index.module.scss
+++ b/components/button/index.module.scss
@@ -10,18 +10,24 @@
 	border-radius: 4px;
 	transition: all 0.2s ease;
 
+	@include breakpoint-md {
+		padding: 9px 12px;
+	}
+
 	&:hover,
 	&:focus,
 	&:active {
 		outline: none;
 	}
 
-	&:hover {
-		transform: translate3d(0, -2px, 0);
-	}
+	@media (pointer: fine) {
+		&:hover {
+			transform: translate3d(0, -2px, 0);
+		}
 
-	&:active {
-		transform: translate3d(0, 0, 0);
+		&:active {
+			transform: translate3d(0, 0, 0);
+		}
 	}
 }
 
@@ -52,14 +58,34 @@
 	padding: 5px 0;
 	background: transparent;
 	border: 1px solid transparent;
+
+	@include breakpoint-md {
+		padding: 9px 0;
+	}
+}
+
+:global(.dark-mode) .transparent {
+	@include breakpoint-md {
+		background: $dark-grey;
+	}
+}
+
+.modalClose {
+	composes: base;
+	padding: 5px 16px;
+	background-color: $off-white;
+	border: 1px solid $light-grey;
+	border-radius: 18px;
 }
 
 .regularTransparent {
-	composes: transparent;
+	composes: base;
 	padding: 0;
 	font-size: $font-size-regular-body;
 	line-height: $line-height-regular-body;
 	text-decoration: none;
+	background: transparent;
+	border: 1px solid transparent;
 	border: 0;
 }
 
@@ -89,6 +115,10 @@
 
 :global(.dark-mode) .gray {
 	color: $grey-dark;
+
+	@include breakpoint-md {
+		color: $off-white-dark;
+	}
 }
 
 .white {
@@ -148,5 +178,15 @@
 	&:hover {
 		background: $green-hover;
 		border-color: $green-hover;
+	}
+}
+
+.bgDarkGray {
+	background: $dark-grey;
+	border-color: $dark-grey;
+
+	&:hover {
+		background: $darker-grey;
+		border-color: $darker-grey;
 	}
 }
