--- a/pages/index.module.scss
+++ b/pages/index.module.scss
@@ -6,6 +6,7 @@
 }
 
 .container {
+	position: relative;
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
@@ -14,4 +15,10 @@
 	min-height: 100vh;
 	padding: 52px 20px;
 	margin: 0 auto;
+
+	@include breakpoint-md {
+		align-items: stretch;
+		max-width: 100%;
+		padding: 0;
+	}
 }
