--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -1,3 +1,5 @@
+@import 'breakpoints';
+
 $white: #fff;
 $white-dark: #a8b7c4;
 $off-white: #fafafa;
@@ -47,3 +49,6 @@ $line-height-title: 24px;
 
 $font-size-large-title: 18px;
 $line-height-large-title: 24px;
+
+$font-size-extra-large-title: 32px;
+$line-height-extra-large-title: 40px;
