chore(deps): upgrade dependencies

--- a/components/code-highlight/index.module.scss
+++ b/components/code-highlight/index.module.scss
@@ -4,7 +4,7 @@
 	overflow: auto;
 
 	code {
-		font-family: Monaco, monospace;
+		font-family: Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace;
 		font-size: $font-size-small-body;
 		line-height: $line-height-small-body;
 	}
