--- a/components/lazy-image/index.module.scss
+++ b/components/lazy-image/index.module.scss
@@ -8,6 +8,24 @@
 		height: 100%;
 		padding-bottom: 0 !important;
 	}
+
+	&.rounded {
+		border-radius: 50%;
+	}
+
+	canvas {
+		position: absolute;
+		top: 0;
+		right: 0;
+		bottom: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+	}
+
+	&.rounded canvas {
+		border-radius: 50%;
+	}
 }
 
 .image {
